--- a/style.css
+++ b/style.css
@@ -97,8 +97,83 @@ nav ul li i {
 .banner-img img {
   width: 100%;
 }
-/* responsive style */
 
+/* companys style */
+.company-container {
+  max-width: 78%;
+  margin: 100px auto;
+}
+.company-container hr {
+  background: linear-gradient(
+    90deg,
+    rgba(192, 204, 218, 0.1) 0%,
+    rgba(192, 204, 218, 0.6) 50.38%,
+    rgba(192, 204, 218, 0.1) 100%
+  );
+  height: 2px;
+  border: none;
+}
+.companys {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0px;
+  flex-wrap: wrap;
+}
+.companys img {
+  max-width: 100%;
+}
+
+/* popular collection section */
+.popular {
+  max-width: 80%;
+  margin: 100px auto;
+}
+
+.popular-collection-title {
+  color: var(--primary-color);
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 1.75rem;
+  font-weight: 600;
+}
+
+.collection-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+.card {
+  padding: 12px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.card img {
+  width: 100%;
+}
+.card .card-title {
+  color: #18191f;
+  font-size: 1.75rem;
+  font-weight: 500;
+}
+.card .card-price {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.card .star img {
+  width: 20px;
+}
+.card .card-description {
+  color: #787885;
+  font-weight: 700;
+  font-size: 0.85rem;
+  max-width: 60%;
+  text-align: justify;
+}
+/* responsive style */
 @media screen and (max-width: 576px) {
   nav .menu-icon {
     display: inline-block;
@@ -122,6 +197,23 @@ nav ul li i {
   .banner-content .banner-title {
     font-size: 1.75rem;
   }
+
+  .company-container img {
+    max-width: 25%;
+    padding: 10px;
+  }
+  .company-container hr {
+    display: none;
+  }
+
+  .collection-cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  .popular {
+    max-width: 90%;
+  }
 }
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
@@ -132,5 +224,14 @@ nav ul li i {
   .banner-content {
     width: 100%;
     margin-top: 20px;
+  }
+  .company-container img {
+    max-width: 100%;
+    padding: 10px;
+  }
+  .collection-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
   }
 }
