--- a/style.css
+++ b/style.css
@@ -223,6 +223,42 @@ nav ul li i {
   border: none;
   font-weight: 700;
 }
+
+/* footer section style */
+footer {
+  background: #0a0826;
+  color: white;
+  text-align: center;
+  padding: 50px 0px;
+}
+footer .footer-title {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+footer .copyright {
+  font-size: 0.9rem;
+  color: #d9dbe1;
+  margin: 3px 0px;
+}
+footer .all-right-reserved {
+  font-size: 0.9rem;
+  color: #d9dbe1;
+  margin-bottom: 17px;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+}
+
+footer ul li {
+  list-style: none;
+  margin: 5px;
+  background-color: #2a293d;
+  padding: 0px 5px;
+  border-radius: 100%;
+}
 /* responsive style */
 @media screen and (max-width: 576px) {
   nav .menu-icon {
